# squish-em

./: .gitignore  README.md  about.html  creator.html  download.html  game.html  howtoplay.html  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: build-apk.yml  update-changelog.yml  vercel-cache-purge.yml
ai-agent/: README.md  package.json  tsconfig.json
ai-agent/src/: agent.ts  config.ts  index.ts  types.ts
ai-agent/src/game/: canvas-reader.ts  controller.ts
ai-agent/src/mining/: reward-claimer.ts  scheduler.ts  (+1 more)
blockchain/: Anchor.toml  Cargo.toml  README.md
blockchain/programs/squish-leaderboard/: Cargo.toml
blockchain/programs/squish-leaderboard/src/: lib.rs
blockchain/programs/squish-mining/: Cargo.toml
blockchain/programs/squish-mining/src/: lib.rs
blockchain/programs/squish-nft/: Cargo.toml
blockchain/programs/squish-nft/src/: lib.rs
blockchain/programs/squish-token/: Cargo.toml
blockchain/programs/squish-token/src/: lib.rs
blockchain/scripts/: deploy.sh
blockchain/sdk/: package.json  tsconfig.json
docs/: architecture.md  roadmap.md
docs/ai-agent/: setup.md
docs/blockchain/: setup.md  strategy.md  token-economics.md
docs/mobile/: setup.md
mobile/: README.md  app.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  nft-skins.tsx  wallet.tsx
mobile/constants/: colors.ts
mobile/hooks/: useLeaderboard.ts
mobile/store/: mining.ts  wallet.ts
public/: 404.html  changelog.json  manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src/components/: MiningPanel.tsx  footer.tsx  hero-canvas.tsx  nav.tsx  pwa-prompt.tsx
src/hooks/: use-scroll-reveal.ts  useMiningAgent.ts
src/lib/: agent-bridge.ts  i18n.tsx  mining-worker.ts  types.ts
src/pages/: about.tsx  ai-agent.tsx  beta.tsx  changelog.tsx  cookies.tsx  feedback.tsx  home.tsx  how-to-play.tsx  legal.tsx  mining.tsx  play.tsx  roadmap.tsx  tech.tsx
(+18 files in other folders)
