[package]
name = "squish-nft"
version = "0.1.0"
description = "SQUISH NFT blob skins — unique Metaplex NFTs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squish_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = "4.1.0"
