[package]
name = "squish-token"
version = "0.1.0"
description = "SQUISH token program — earn by playing, spend on NFT skins"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "squish_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["token"] }
